--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <title> 
+        Портфолио
+    </title>
+    <link href="style.css" rel="stylesheet" type="text/css".
     <header>
         <div class="avatarki">
             <h1>Гришин</h1>
