--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <header>
         <div class="avatarki">
             <h1>Гришин</h1>
-            <img src="https://avatars.mds.yandex.net/i?id=69b668b7ab865ae44914516302025f4704fadf96-10163806-images-thumbs&n=13">
+            <img src="i.webp">
             <h1>Никита</h1>
         </div>
     </header>
